<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Last.fm</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Discover more music</string>
	<string name="username">Username</string>
	<string name="but_cmin">COME ON IN</string>
	<string name="registration">Don`t have a profile</string>
	<string name="forget">Forgot password</string>

    <string name="bind">Bind</string>
    <string name="unbind">Unbind</string>
    <string name="recomMusic">Recommended Music</string>
    <string name="newReleases">New Releases</string>
    <string name="upcomEvents">Upcoming Events Near You</string>
</resources>
