<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_linear_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_overlay"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/icon_lastfm"
        android:layout_centerHorizontal="true" />

     <TextView
         android:id="@+id/text_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/image"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
         android:fontFamily="sans-serif-thin"
         android:gravity="center"
         android:text="@string/welcome"
         android:textSize="40sp"
         android:textStyle="italic" />

     <EditText
         android:id="@+id/editText1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/image"
         android:layout_alignRight="@+id/image"
         android:layout_below="@+id/image"
         android:hint="Username"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="128dp"
         android:ems="10" >

         <requestFocus />
     </EditText>

     <EditText
         android:id="@+id/editText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/editText1"
         android:layout_alignRight="@+id/editText1"
         android:layout_below="@+id/editText1"
         android:layout_marginTop="29dp"
         android:hint="Password"
         android:ems="10"
         android:inputType="textPassword" />
	<Button 
	    android:id="@+id/button"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignRight="@+id/editText1"
        android:text="@string/but_cmin"
        android:fontFamily="sans-serif-thin"
        android:layout_marginTop="350dp" />
	
     <TextView
         android:id="@+id/text_registration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button"
         android:layout_marginTop="15dp"
         android:fontFamily="sans-serif"
         android:text="@string/registration"
         android:textSize="15sp"
         android:textStyle="italic"
         android:textColor="#ff0000" />	
     <TextView
         android:id="@+id/text_forget"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button"
         android:layout_marginTop="15dp"
         android:fontFamily="sans-serif"
         android:text="@string/forget"
         android:textSize="15sp"
         android:textStyle="italic"
         android:textColor="#000000"
         android:layout_marginLeft="170dp" />	
     

</RelativeLayout>


