<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#262626">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="54dp">

        <TextView
            android:layout_marginLeft="8dp"
            android:layout_toLeftOf="@+id/moreButton"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:text="@string/recomMusic"
            android:textColor="#fff"
            android:textSize="18dp"
            android:fontFamily="sans-serif-light"
            android:layout_alignBottom="@+id/moreButton"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/moreButton">
        </TextView>

        <Button
            android:id="@+id/moreButton"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:text="MORE"
            android:textColor="#fff"
            android:textSize="12dp"
            android:fontFamily="sans"
            android:layout_marginRight="8dp"
            android:background="#D51007"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="false"
            android:layout_alignParentBottom="false"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/recRow1"
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/recomGroup1"

            android:layout_weight="1">
            <ImageView
                android:id="@+id/recomImg1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/icon_lastfm"/>
            <TextView
                android:id="@+id/recomName1"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_gravity="bottom"
                android:text="asdasdasdfa"
                android:paddingLeft="8dp"
                android:textColor="#fff"
                android:textSize="14dp"
                android:background="#88000000"
                android:layout_marginBottom="22dp"
                android:fontFamily="sans-serif"
                android:drawablePadding="108dp"/>
            <TextView
                android:id="@+id/recomSimilar1"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_gravity="bottom"
                android:paddingLeft="8dp"
                android:text="asdasdasdfa"
                android:textColor="#80ffffff"
                android:background="#88000000"
                android:textSize="12dp"
                android:fontFamily="sans-serif"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/recomGroup2"

            android:layout_weight="1">
            <ImageView
                android:id="@+id/recomImg2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/icon_lastfm"/>
            <TextView
                android:id="@+id/recomName2"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_gravity="bottom"
                android:paddingLeft="8dp"
                android:text="asdasdasdfa"
                android:textColor="#fff"
                android:textSize="14dp"
                android:background="#88000000"
                android:layout_marginBottom="22dp"
                android:fontFamily="sans-serif"
                android:drawablePadding="108dp"/>
            <TextView
                android:id="@+id/recomSimilar2"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_gravity="bottom"
                android:paddingLeft="8dp"
                android:text="asdasdasdfa"
                android:textColor="#80ffffff"
                android:background="#88000000"
                android:textSize="12dp"
                android:fontFamily="sans-serif"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recRow2"
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/recomGroup3"

            android:layout_weight="1">
            <ImageView
                android:id="@+id/recomImg3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/icon_lastfm"/>
            <TextView
                android:id="@+id/recomName3"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_gravity="bottom"
                android:text="asdasdasdfa"
                android:textColor="#fff"
                android:textSize="14dp"
                android:background="#88000000"
                android:layout_marginBottom="22dp"
                android:fontFamily="sans-serif"
                android:drawablePadding="108dp"/>
            <TextView
                android:id="@+id/recomSimilar3"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_gravity="bottom"
                android:text="asdasdasdfa"
                android:textColor="#80ffffff"
                android:background="#88000000"
                android:textSize="12dp"
                android:fontFamily="sans-serif"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/recomGroup4"

            android:layout_weight="1">
            <ImageView
                android:id="@+id/recomImg4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/icon_lastfm"/>
            <TextView
                android:id="@+id/recomName4"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_gravity="bottom"
                android:text="asdasdasdfa"
                android:textColor="#fff"
                android:paddingLeft="8dp"
                android:textSize="14dp"
                android:background="#88000000"
                android:layout_marginBottom="22dp"
                android:fontFamily="sans-serif"
                android:drawablePadding="108dp"/>
            <TextView
                android:id="@+id/recomSimilar4"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_gravity="bottom"
                android:paddingLeft="8dp"
                android:text="asdasdasdfa"
                android:textColor="#80ffffff"
                android:background="#88000000"
                android:textSize="12dp"
                android:fontFamily="sans-serif"/>
        </FrameLayout>
    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="54dp">

        <TextView
            android:layout_marginLeft="8dp"
            android:layout_toLeftOf="@+id/moreButton2"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:text="@string/newReleases"
            android:textColor="#fff"
            android:textSize="18dp"
            android:fontFamily="sans-serif-light"
            android:layout_alignBottom="@+id/moreButton2"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/moreButton2">

        </TextView>

        <Button
            android:id="@+id/moreButton2"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:text="MORE"
            android:textColor="#fff"
            android:textSize="12dp"
            android:fontFamily="sans"
            android:layout_marginRight="8dp"
            android:background="#D51007"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="false"
            android:layout_alignParentBottom="false"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/newRel1"

            android:layout_weight="1">
            <ImageView
                android:id="@+id/newRelImg1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/icon_lastfm"/>
            <TextView
                android:id="@+id/newRelName1"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_gravity="bottom"
                android:paddingLeft="8dp"
                android:text="asdasdasdfa"
                android:textColor="#fff"
                android:textSize="14dp"
                android:background="#88000000"
                android:layout_marginBottom="22dp"
                android:fontFamily="sans-serif"
                android:drawablePadding="108dp"/>
            <TextView
                android:id="@+id/newRelSimilar3"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_gravity="bottom"
                android:text="asdasdasdfa"
                android:paddingLeft="8dp"
                android:textColor="#80ffffff"
                android:background="#88000000"
                android:textSize="12dp"
                android:fontFamily="sans-serif"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/newRel2"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/newRelImg2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/icon_lastfm"/>
            <TextView
                android:id="@+id/newRelName2"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_gravity="bottom"
                android:text="asdasdasdfa"
                android:paddingLeft="8dp"
                android:textColor="#fff"
                android:textSize="14dp"
                android:background="#88000000"
                android:layout_marginBottom="22dp"
                android:fontFamily="sans-serif"
                android:drawablePadding="108dp"/>
            <TextView
                android:id="@+id/newRelSimilar2"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_gravity="bottom"
                android:paddingLeft="8dp"
                android:text="asdasdasdfa"
                android:textColor="#80ffffff"
                android:background="#88000000"
                android:textSize="12dp"
                android:fontFamily="sans-serif"/>
        </FrameLayout>
    </LinearLayout>







    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="54dp">

        <TextView
            android:layout_marginLeft="8dp"
            android:layout_toLeftOf="@+id/moreButton3"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:text="@string/upcomEvents"
            android:textColor="#fff"
            android:textSize="18dp"
            android:fontFamily="sans-serif-light"
            android:layout_alignBottom="@+id/moreButton3"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/moreButton3">
        </TextView>

        <Button
            android:id="@+id/moreButton3"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:text="MORE"
            android:textColor="#fff"
            android:textSize="12dp"
            android:fontFamily="sans"
            android:layout_marginRight="8dp"
            android:background="#D51007"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="false"
            android:layout_alignParentBottom="false"
            android:layout_centerVertical="true" />
    </RelativeLayout>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="128dp"
        android:orientation="vertical"
        android:id="@+id/upComLayout"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/upComImg1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/icon_lastfm"/>
        <TextView
            android:id="@+id/months"
            android:layout_width="28dp"
            android:layout_height="16dp"
            android:layout_gravity="bottom"
            android:padding="3dp"
            android:layout_marginBottom="26dp"
            android:fontFamily="sans-serif"
            android:background="#FF0000"
            android:textSize="10dp"
            android:textColor="#fff"
            android:text="MAR"/>
        <TextView
            android:id="@+id/day"
            android:layout_width="28dp"
            android:layout_height="27dp"
            android:layout_gravity="bottom"
            android:fontFamily="sans-serif"
            android:background="#ffffff"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="#000"
            android:text="12"/>
        <TextView
            android:id="@+id/upComBandName"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="28dp"
            android:layout_gravity="bottom"
            android:text="asdasdasdfa"
            android:textColor="#fff"
            android:textSize="14dp"
            android:background="#88000000"
            android:layout_marginBottom="22dp"
            android:fontFamily="sans-serif"
            android:paddingLeft="8dp"/>
        <TextView
            android:id="@+id/upComSimilar"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginLeft="28dp"
            android:layout_gravity="bottom"
            android:text="asdasdasdfa"
            android:textColor="#ffffff"
            android:background="#88000000"
            android:textSize="12dp"
            android:fontFamily="sans-serif"
            android:paddingLeft="8dp"/>

    </FrameLayout>
</LinearLayout>

</ScrollView>
</LinearLayout>